# jajaja

./: pyproject.toml  scrap.ipynb
src/jajaja/: __init__.py  main.py
